bk_ida/gccida/g3/reversed_comparison
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11562:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  reversed_comparison( rtx exp, machine_mode mode, rtx op0, rtx op1) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11564:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11568:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11574:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11579:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)exp->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11580:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + *( unsigned __int8 *)( v9.rtwint + 2)) != 4 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11587:41: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v12 = reversed_comparison_code_parts( ( rtx_code)*( _WORD *)exp, last_value->fld[0].rtx, *( rtx *)&last_value[1], 0LL); 
                                        ^~~~~~~~
                                        rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11587:50: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v12 = reversed_comparison_code_parts( ( rtx_code)*( _WORD *)exp, last_value->fld[0].rtx, *( rtx *)&last_value[1], 0LL); 
                                      ~~~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/combine.c:11599:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op1 = ( rtx)op0[1]; 
            ^~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison/src/obj/combine.o] Error 1
